Updating landing page with written content.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,79 @@
 
         <div class="outer">
         <div class="inner">
-        <a href="mailto:mrotch@calibregroupllc.com"><img src="img/calibre.jpg" /></a>
+        
+        <div class="contact"><a href="mailto:mrotch@calibregroupllc.com"><img src="img/contactus.png"></a></div>
+
+        <div class="logo"><img src="img/logo.png"></div>
+
+        <div class="text">
+            <div class="center"><p class="red">We are pleased to announce the formation of Calibre Group.</p></div>
+
+            <p>Calibre Group will be led by Jim Tumulty and will provide advisory and proprietary capital solutions to companies in the metals, paper, container, manufacturing and energy sectors. Our focus is on industry groups where we have deep operational experience, especially those with unionized workforces or complicated financial or operational issues. Calibre will bring the hands-on, bottom-up approach to finding solutions for its clients that people have come to expect from Jim, Ed Siegel and their team. The addition of proprietary capital and the distressed expertise of long-time friend, Harrison Bubrosky, will substantially increase the team’s ability to provide creative, focused solutions to our valued clients. Calibre expects to announce additional hires in the near term.</p>  
+       
+            <p>Calibre Group will seek to deploy its proprietary capital in a wide variety of investments, including controlling equity stakes in companies in our target sectors, opportunistic steel inventory buys, industrial redevelopment investments, debt purchases and special situation loans in restructuring or turn-around situations. We expect that most of these investments will be in the $5 to $15 million range, but we have the ability to take larger investments to our financial partners when our specific experience and expertise can add significant value. Calibre professionals have co-invested cooperatively with our clients in selected transactions in the past and we intend to continue and expand on that tradition.</p>
+
+            <p>We are excited to discuss Calibre Group with you – our friends, valued clients, and colleagues – in more detail in the near future.  We believe the team we have assembled for our new firm will allow us to provide exceptional value to our clients and our investors. We look forward to working with you!</p>
+        </div>
+
+        <div class="namerow1">
+            <div class="left">
+                <div class="person">
+                    <div class="name">James S. Tumulty</div>
+                    <div class="title">Principal and CEO</div>
+                    <div class="email"><a href="mailto:jtumulty@calibregroupllc.com">jtumulty@calibregroupllc.com</a></div>
+                    <div class="phone">O: 412-756-0068</div>
+                    <div class="phone">C: 732-539-8421</div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="person">
+                    <div class="name">Edward A. Siegel, CFA</div>
+                    <div class="title">Principal and CFO</div>
+                    <div class="email"><a href="mailto:esiegel@calibregroupllc.com">esiegel@calibregroupllc.com</a></div>
+                    <div class="phone">O: 412-756-0069</div>
+                    <div class="phone">C: 732-284-8156</div>
+                </div>                
+            </div>
+        </div>
+
+        <div class="namerow2">
+            <div class="first">
+                <div class="left">
+                    <div class="person">
+                        <div class="name">Toby J. Kreidler</div>
+                        <div class="title">Principal</div>
+                        <div class="email"><a href="mailto:tkreidler@calibregroupllc.com">tkreidler@calibregroupllc.com</a></div>
+                        <div class="phone">O: 412-756-0063</div>
+                        <div class="phone">C: 412-417-8563</div>
+                    </div>                       
+                </div>
+                <div class="right">
+                    <div class="person">
+                        <div class="name">Harrison A. Bubrosky</div>
+                        <div class="title">Principal</div>
+                        <div class="email"><a href="mailto:hab@calibregroupllc.com">hab@calibregroupllc.com</a></div>
+                        <div class="phone">O: 412-756-0071</div>
+                        <div class="phone">C: 203-561-8275</div>
+                    </div>                       
+                </div>
+            </div>
+            <div class="second">
+                <div class="person">
+                    <div class="name">Michael J. Rotch</div>
+                    <div class="title">Vice President</div>
+                    <div class="email"><a href="mailto:mrotch@calibregroupllc.com">mrotch@calibregroupllc.com</a></div>
+                    <div class="phone">O: 412-756-0064</div>
+                    <div class="phone">C: 614-288-0344</div>
+                </div>                   
+            </div>
+        </div>
+
+        <div class="comingsoon"><img src="img/comingsoon.png"></div>
+
+        <div class="bottom"><a href="https://maps.google.com/maps?q=707+Grant+Street+Pittsburgh,+PA+15219&t=m&hnear=707+Grant+St,+Pittsburgh,+Pennsylvania+15219&z=16" target="_blank"><img src="img/bottomline.png"></a></div>
+
+
         </div>
         </div>
 
